    * An issue related to Conary proxies running in non-SSL mode,
      talking to SSL-enabled repository servers has been fixed.
      (CNY-2067)
    * Related to CNY-2034, Conary proxies are now properly computing
      the return URL. (CNY-2069)
    * The client is now properly computing the downloaded file's
      digest if a size limit was specified. (CNY-2072)

  o Other Changes
    * InodeStreams and FileStreams now preserve unknown elements,
      allowing future additions to those without breaking fileId
      computation. (CNY-1971)

Changes in 1.1.95:
  o Server Changes
    * A bug which triggered an exception while migrating postgresql
      repositories has been fixed. (CNY-1912)
    * The getNewTroveInfo call works faster for mirror operations.
      (CNY-2006)
    * An issue that prevented the server from responding with the
      proper error message when in maintenance mode has been fixed.
      (CNY-2005)
    * An issue that was affecting cooking performance when looking
      up path IDs has been fixed. (CNY-1996)

  o Client Changes:
    * A bug which prevented the mirror client from using hidden commits
      when mirroring to a single target has been fixed. (CNY-1981)
    * Clone/promote no longer complains when a buildreq is not also
      being cloned to the new location. (CNY-1844)
    * Turned off flavorPreferences for 1.2 release, as they are not
      quite ready. (CNY-2023)

  o Bug Fixes:
    * Bootstrapping python can now find system conary when using the
      bootstrapped python to determine python dependencies. (CNY-2001)
    * A bug in findTroves when using partial labels, introduced as
      part of 1.1.90, has been fixed. (CNY-2011)
    * cvc operations no longer trace back when the current working
      directory can no longer be accessed. (CNY-2014)
    * Redirects to nothing are now displayed when using --trove-flags.
      (CNY-2025)
    * Stack frames now wrap long lines to make them easier to read.
      (CNY-2016)